# Github-Universal-Scaffolding-Generator-Advanced

./: .gitignore  .markdownlint-cli2.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
src/github_scaffolding_generator/: cli.py  generator.py  validator.py
src/github_scaffolding_generator/templates/: editorconfig.j2  gitattributes.j2  gitignore.j2  pyproject.toml.j2
src/github_scaffolding_generator/templates/ci/: ci.yml.j2
src/github_scaffolding_generator/templates/community_standards/: CHANGELOG.md.j2  CODE_OF_CONDUCT.md.j2  CONTRIBUTING.md.j2  LICENSE.md.j2  README.md.j2  SECURITY.md.j2
src/github_scaffolding_generator/templates/github/: CODEOWNERS.j2  dependabot.yml.j2
tests/: test_cli.py
